# agents-course

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: README.md  deep_research.py  email_agent.py  research_manager.py  search_agent.py  writer_agent.py
3_crew/coder/output/: code_and_output.txt
3_crew/coder/src/coder/: crew.py
3_crew/coder/src/coder/config/: agents.yaml
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate/src/debate/: crew.py  main.py
3_crew/engineering_team/src/engineering_team/: crew.py
3_crew/financial_researcher/output/: report.md
3_crew/release_note_compiler/: README.md  pyproject.toml
3_crew/release_note_compiler/src/release_note_compiler/: crew.py  main.py
3_crew/release_note_compiler/src/release_note_compiler/config/: agents.yaml  tasks.yaml
3_crew/stock_picker/memory/: long_term_memory_storage.db
3_crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  memory.db  memory.db-shm  memory.db-wal  sidekick_tools.py
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  accounts_client.py  accounts_server.py  market.py  mcp_params.py  push_server.py  templates.py  traders.py  trading_floor.py
(+4 files in other folders)
